--- a/src/blocks/advantages/advantages.html
+++ b/src/blocks/advantages/advantages.html
@@ -1,5 +1,5 @@
 <!-- Преимущества -->
-<section class="section section_no-indent advantages">
+<section class="section section_no-indent advantages" id="advantages">
   <div
     class="splide splide_transparent-arrows"
     id="advantages-slider"
