--- a/src/blocks/features/features.html
+++ b/src/blocks/features/features.html
@@ -1,5 +1,5 @@
 <!-- Особенности -->
-<section class="section">
+<section class="section" id="features">
   <div class="section__indent">
     <h2 class="section__title">
       Особенности нашего <span class="text-decor">Qr‑меню</span>
