--- a/src/blocks/footer/footer.html
+++ b/src/blocks/footer/footer.html
@@ -27,11 +27,11 @@
       <h2 class="footer__title">Меню</h2>
       <nav class="footer__nav">
         <ul class="footer__nav-list">
-          <li><a class="footer__link" href="#0">Главная</a></li>
-          <li><a class="footer__link" href="#0">Преимущества</a></li>
-          <li><a class="footer__link" href="#0">Особенности</a></li>
-          <li><a class="footer__link" href="#0">Как это работает</a></li>
-          <li><a class="footer__link" href="#0">Тарифы</a></li>
+          <li><a class="footer__link" href="#">Главная</a></li>
+          <li><a class="footer__link" data-link="advantages">Преимущества</a></li>
+          <li><a class="footer__link" data-link="features">Особенности</a></li>
+          <li><a class="footer__link" data-link="how">Как это работает</a></li>
+          <li><a class="footer__link" data-link="pricing">Тарифы</a></li>
         </ul>
       </nav>
     </div>
