--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -17,16 +17,16 @@
     </a>
     <ul class="header__list">
       <li class="header__list-item">
-        <a class="header__link" href="#0">Преимущества</a>
+        <a class="header__link" data-link="advantages">Преимущества</a>
       </li>
       <li class="header__list-item">
-        <a class="header__link" href="#0">Особенности</a>
+        <a class="header__link" data-link="features">Особенности</a>
       </li>
       <li class="header__list-item">
-        <a class="header__link" href="#0">Как это работает</a>
+        <a class="header__link" data-link="how">Как это работает</a>
       </li>
       <li class="header__list-item">
-        <a class="header__link" href="#0">Тарифы</a>
+        <a class="header__link" data-link="pricing">Тарифы</a>
       </li>
     </ul>
     <ul class="header__social-list">
