--- a/src/blocks/hiw/hiw.html
+++ b/src/blocks/hiw/hiw.html
@@ -4,7 +4,7 @@
     <h2 class="section__title">Как работает наше Qr‑меню</h2>
     <div class="hiw__container">
       <ul class="hiw__list">
-        <li class="hiw__list-item">
+        <li class="hiw__list-item" id="hiw1">
           <h3 class="hiw__list-item-title">Гость сканирует QR‑код</h3>
           <div class="hiw__list-item-description">
             <p>
@@ -18,7 +18,7 @@
             </ul>
           </div>
         </li>
-        <li class="hiw__list-item">
+        <li class="hiw__list-item" id="hiw2">
           <h3 class="hiw__list-item-title">Главная</h3>
           <div class="hiw__list-item-description">
             <p>Небольшое описание</p>
@@ -29,7 +29,7 @@
             </ul>
           </div>
         </li>
-        <li class="hiw__list-item">
+        <li class="hiw__list-item" id="hiw3">
           <h3 class="hiw__list-item-title">Выбор позиций</h3>
           <div class="hiw__list-item-description">
             <p>Небольшое описание</p>
@@ -40,7 +40,7 @@
             </ul>
           </div>
         </li>
-        <li class="hiw__list-item">
+        <li class="hiw__list-item" id="hiw4">
           <h3 class="hiw__list-item-title">Просмотр деталей</h3>
           <div class="hiw__list-item-description">
             <p>Небольшое описание</p>
@@ -51,7 +51,7 @@
             </ul>
           </div>
         </li>
-        <li class="hiw__list-item">
+        <li class="hiw__list-item" id="hiw5">
           <h3 class="hiw__list-item-title">Просмотр фотографии блюда</h3>
           <div class="hiw__list-item-description">
             <p>Небольшое описание</p>
@@ -62,7 +62,7 @@
             </ul>
           </div>
         </li>
-        <li class="hiw__list-item">
+        <li class="hiw__list-item" id="hiw6">
           <h3 class="hiw__list-item-title">
             Фиксация сверху меню для быстрого доступа
           </h3>
@@ -75,8 +75,10 @@
             </ul>
           </div>
         </li>
-        <li class="hiw__list-item">
-          <h3 class="hiw__list-item-title">Оформление заказа</h3>
+        <li class="hiw__list-item" id="hiw7">
+          <h3 class="hiw__list-item-title">
+            Оформление заказа
+          </h3>
           <div class="hiw__list-item-description">
             <p>Небольшое описание</p>
             <ul class="list-bullet-decor">
@@ -86,8 +88,10 @@
             </ul>
           </div>
         </li>
-        <li class="hiw__list-item">
-          <h3 class="hiw__list-item-title">Подтверждение заказа</h3>
+        <li class="hiw__list-item" id="hiw8">
+          <h3 class="hiw__list-item-title">
+            Подтверждение заказа
+          </h3>
           <div class="hiw__list-item-description">
             <p>Небольшое описание</p>
             <ul class="list-bullet-decor">
@@ -99,7 +103,7 @@
         </li>
       </ul>
       <div class="hiw__images">
-        <picture class="hiw__image-wrap hiw__image-wrap_active">
+        <picture class="hiw__image-wrap hiw__image-wrap_active" id="hiw1_image">
           <source srcset="./images/hiw__image-01.webp" type="image/webp" />
           <img
             class="hiw__image"
@@ -107,23 +111,23 @@
             alt=""
           />
         </picture>
-        <picture class="hiw__image-wrap">
+        <picture class="hiw__image-wrap" id="hiw2_image">
           <source srcset="./images/hiw__image-02.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-02.png" alt="" />
         </picture>
-        <picture class="hiw__image-wrap">
+        <picture class="hiw__image-wrap" id="hiw3_image">
           <source srcset="./images/hiw__image-03.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-03.png" alt="" />
         </picture>
-        <picture class="hiw__image-wrap">
+        <picture class="hiw__image-wrap" id="hiw4_image">
           <source srcset="./images/hiw__image-04.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-04.png" alt="" />
         </picture>
-        <picture class="hiw__image-wrap">
+        <picture class="hiw__image-wrap" id="hiw5_image">
           <source srcset="./images/hiw__image-05.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-05.png" alt="" />
         </picture>
-        <picture class="hiw__image-wrap">
+        <picture class="hiw__image-wrap" id="hiw6_image">
           <source srcset="./images/hiw__image-06.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-06.png" alt="" />
         </picture>
