--- a/src/blocks/how/how.html
+++ b/src/blocks/how/how.html
@@ -1,5 +1,5 @@
 <!-- Как это работает? -->
-<section class="section how">
+<section class="section how" id="how">
   <div class="section__indent section__card how__card">
     <picture class="how__image-wrap">
       <source srcset="./images/how__image.webp" type="image/webp" />
