Обновлен блок с преимуществами

--- a/src/blocks/advantages/advantages.html
+++ b/src/blocks/advantages/advantages.html
@@ -21,12 +21,10 @@
               />
             </picture>
             <div class="banner-card__content">
-              <h2 class="banner-card__title">Инновация и современность</h2>
+              <h2 class="banner-card__title">Обновление в реальном времени</h2>
               <div class="banner-card__description">
                 <p>
-                  Электронное меню поможет ресторану выделиться на фоне
-                  конкурентов и создать впечатление современного заведения,
-                  привлекающего внимание клиентов.
+                  Новое блюдо от шеф-повара? Отдельное меню на бизнес-ланч и завтрак? Новое сезонное меню? Владельцы ресторанов могут легко обновлять цены, добавлять новые блюда и категории, а также создавать отдельные меню в реальном времени!
                 </p>
               </div>
             </div>
@@ -36,23 +34,20 @@
           <article class="banner-card">
             <picture class="banner-card__image-wrap">
               <source
-                srcset="./images/advantages__image-01.webp"
+                srcset="./images/advantages__image-02.webp"
                 type="image/webp"
               />
               <img
                 class="banner-card__image"
-                src="./images/advantages__image-01.jpg"
+                src="./images/advantages__image-02.jpg"
                 alt=""
               />
             </picture>
             <div class="banner-card__content">
-              <h2 class="banner-card__title">Интерактивность для клиентов</h2>
+              <h2 class="banner-card__title">Поддержка разных языков</h2>
               <div class="banner-card__description">
                 <p>
-                  Электронное меню предоставляет клиентам возможность
-                  интерактивного просмотра блюд, просмотра фотографий и
-                  описаний, что делает процесс выбора более увлекательным и
-                  привлекательным.
+                  У туристов возникают сложности из-за языкового барьера при заказе в ресторане, поэтому они отдают предпочтения тем заведениям, у которых меню содержит картинки с блюдами и есть меню на родном языке. Наше электронное меню решает эти проблемы!
                 </p>
               </div>
             </div>
@@ -62,12 +57,37 @@
           <article class="banner-card">
             <picture class="banner-card__image-wrap">
               <source
-                srcset="./images/advantages__image-01.webp"
+                srcset="./images/advantages__image-03.webp"
                 type="image/webp"
               />
               <img
                 class="banner-card__image"
-                src="./images/advantages__image-01.jpg"
+                src="./images/advantages__image-03.jpg"
+                alt=""
+              />
+            </picture>
+            <div class="banner-card__content">
+              <h2 class="banner-card__title">
+                Экономия средств на печати и обслуживание меню
+              </h2>
+              <div class="banner-card__description">
+                <p>
+                  Использование электронного меню позволяет ресторанам сэкономить деньги, которые ранее были затрачены на печать, обновление и переработку бумажных меню.
+                </p>
+              </div>
+            </div>
+          </article>
+        </li>
+        <li class="splide__slide">
+          <article class="banner-card">
+            <picture class="banner-card__image-wrap">
+              <source
+                srcset="./images/advantages__image-04.webp"
+                type="image/webp"
+              />
+              <img
+                class="banner-card__image"
+                src="./images/advantages__image-04.jpg"
                 alt=""
               />
             </picture>
@@ -77,10 +97,7 @@
               </h2>
               <div class="banner-card__description">
                 <p>
-                  Электронное меню может помочь сократить время ожидания
-                  клиентов на заказы, так как они могут быстро просматривать
-                  меню и делать выбор, улучшая общее качество обслуживания и
-                  удовлетворенность клиентов.
+                  Электронное меню может помочь сократить время ожидания клиентов их заказов, так как они могут быстро просматривать меню и делать выбор, не дожидаясь официантов, улучшая общее качество обслуживания и удовлетворенность клиентов, а также повышая средний чек и минимизируя вероятность ошибки в приеме заказа.
                 </p>
               </div>
             </div>
@@ -90,24 +107,22 @@
           <article class="banner-card">
             <picture class="banner-card__image-wrap">
               <source
-                srcset="./images/advantages__image-01.webp"
+                srcset="./images/advantages__image-05.webp"
                 type="image/webp"
               />
               <img
                 class="banner-card__image"
-                src="./images/advantages__image-01.jpg"
+                src="./images/advantages__image-05.jpg"
                 alt=""
               />
             </picture>
             <div class="banner-card__content">
               <h2 class="banner-card__title">
-                Экономия средств на печати и обслуживание меню
+                Инновация и современность
               </h2>
               <div class="banner-card__description">
                 <p>
-                  Использование электронного меню позволяет ресторанам
-                  сэкономить деньги, которые ранее были затрачены на печать,
-                  обновление и переработку бумажных меню.
+                  Электронное меню поможет ресторану выделиться на фоне конкурентов и создать впечатление современного заведения, привлекающего внимание клиентов.
                 </p>
               </div>
             </div>
@@ -117,25 +132,20 @@
           <article class="banner-card">
             <picture class="banner-card__image-wrap">
               <source
-                srcset="./images/advantages__image-01.webp"
+                srcset="./images/advantages__image-06.webp"
                 type="image/webp"
               />
               <img
                 class="banner-card__image"
-                src="./images/advantages__image-01.jpg"
+                src="./images/advantages__image-06.jpg"
                 alt=""
               />
             </picture>
             <div class="banner-card__content">
-              <h2 class="banner-card__title">
-                Улучшенная аналитика и отчетность
-              </h2>
+              <h2 class="banner-card__title">Улучшенная аналитика и отчетность</h2>
               <div class="banner-card__description">
                 <p>
-                  Системы электронного меню обычно предоставляют владельцам
-                  ресторанов доступ к аналитике и отчетности о предпочтениях
-                  клиентов, позволяя им принимать более обоснованные решения по
-                  управлению меню и маркетингу.
+                  Система электронного меню предоставляет владельцам ресторанов доступ к отчетности для анализа заполнения ресторана, среднего чека, популярности блюд, позволяя им принимать более обоснованные решения по управлению меню и маркетингу.
                 </p>
               </div>
             </div>
@@ -145,48 +155,20 @@
           <article class="banner-card">
             <picture class="banner-card__image-wrap">
               <source
-                srcset="./images/advantages__image-01.webp"
+                srcset="./images/advantages__image-07.webp"
                 type="image/webp"
               />
               <img
                 class="banner-card__image"
-                src="./images/advantages__image-01.jpg"
+                src="./images/advantages__image-07.jpg"
                 alt=""
               />
             </picture>
             <div class="banner-card__content">
-              <h2 class="banner-card__title">Обновление в реальном времени</h2>
+              <h2 class="banner-card__title">Интерактивность для клиентов</h2>
               <div class="banner-card__description">
                 <p>
-                  Владельцы ресторанов могут легко обновлять цены, добавлять
-                  новые блюда и управлять меню в реальном времени, без
-                  необходимости печатать новые бумажные версии.
-                </p>
-              </div>
-            </div>
-          </article>
-        </li>
-        <li class="splide__slide">
-          <article class="banner-card">
-            <picture class="banner-card__image-wrap">
-              <source
-                srcset="./images/advantages__image-01.webp"
-                type="image/webp"
-              />
-              <img
-                class="banner-card__image"
-                src="./images/advantages__image-01.jpg"
-                alt=""
-              />
-            </picture>
-            <div class="banner-card__content">
-              <h2 class="banner-card__title">Экологическая ответственность</h2>
-              <div class="banner-card__description">
-                <p>
-                  Использование электронного меню позволяет сократить
-                  использование бумаги и уменьшить экологический след ресторана,
-                  что может быть привлекательно для клиентов, ценящих
-                  экологическую ответственность.
+                  Электронное меню предоставляет клиентам возможность интерактивного просмотра блюд, просмотра фотографий и описаний, что делает процесс выбора более увлекательным и привлекательным.
                 </p>
               </div>
             </div>
