new logo, features, hiw sections update content

--- a/src/blocks/features/features.html
+++ b/src/blocks/features/features.html
@@ -19,7 +19,7 @@
           <h3 class="card__title">Быстрый старт</h3>
           <div class="card__description">
             <p>
-              Подключите за 15 минут без сложных настроек, покупки дорогого
+              Подключите за 15 минут без сложных настроек, покупки дорогого
               оборудования и обучения персонала.
             </p>
           </div>
@@ -33,16 +33,52 @@
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 102 102"
             >
-              <use href="./images/icons.svg#establishments"></use>
+              <use href="./images/icons.svg#menu"></use>
             </svg>
           </span>
-          <h3 class="card__title">
-            Нет ограничений по количеству заведений у организации
-          </h3>
+          <h3 class="card__title">Ни каких ограничений</h3>
           <div class="card__description">
             <p>
               Заводите разные меню для каждого заведения, используйте уникальные
-              меню для бизнес ланчей и завтраков
+              меню для бизнес ланчей и завтраков, создавайте различные категории
+              и подкатегории в меню.
+            </p>
+          </div>
+        </article>
+      </li>
+      <li>
+        <article class="card card_theme_outline card_content_border">
+          <span class="card__icon">
+            <svg
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 102 102"
+            >
+              <use href="./images/icons.svg#language"></use>
+            </svg>
+          </span>
+          <h3 class="card__title">Возможность выбора языка</h3>
+          <div class="card__description">
+            <p>Поможет привлечь больше клиентов среди туристов.</p>
+          </div>
+        </article>
+      </li>
+      <li>
+        <article class="card card_theme_outline card_content_border">
+          <span class="card__icon">
+            <svg
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 102 102"
+            >
+              <use href="./images/icons.svg#colors"></use>
+            </svg>
+          </span>
+          <h3 class="card__title">Фирменный стиль</h3>
+          <div class="card__description">
+            <p>
+              Загрузите свой баннер и логотип, выберите цвет и дизайн страницы,
+              передайте гостям уникальную атмосферу заведения.
             </p>
           </div>
         </article>
@@ -75,134 +111,15 @@
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 102 102"
             >
-              <use href="./images/icons.svg#language"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Возможность выбора языка</h3>
-          <div class="card__description">
-            <p>
-              Поможет привлечь больше клиентов и сделать ваш бизнес более
-              интернациональным.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#banner"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Загрузите фирменный баннер и логотип</h3>
-          <div class="card__description">
-            <p>
-              Передайте гостям уникальную атмосферу заведения, повысьте
-              узнаваемость бренда и улучшите имидж компании.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#colors"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Укажите фирменный цвет</h3>
-          <div class="card__description">
-            <p>
-              Упростит навигацию на странице для гостей, повысит лояльность
-              к бренду.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#borders"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Настройте тонкий дизайн страницы</h3>
-          <div class="card__description">
-            <p>
-              Возможность закругления углов для карточек в трёх режимах позволит
-              сделать страницу уникальной и наиболее приблизить её к бренду.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#menu"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Удобное настраиваемое меню</h3>
-          <div class="card__description">
-            <p>
-              Предусмотрена возможность добавления нескольких меню и категорий
-              при необходимости.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#icons"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Красивая и удобная графика</h3>
-          <div class="card__description">
-            <p>
-              Подобраны уникальные иконки для категорий меню, заглушки для фото
-              карточек товаров, что упростит гостям навигацию на странице.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
               <use href="./images/icons.svg#images"></use>
             </svg>
           </span>
-          <h3 class="card__title">Добавляйте свои фото</h3>
+          <h3 class="card__title">Добавляйте свои фото или используйте наши</h3>
           <div class="card__description">
             <p>
-              Добавляйте яркие и сочные фото в категории и карточки, сделайте
-              меню ещё привлекательнее для гостей.
+              Добавляйте яркие и сочные фото для категорий и блюд или
+              используйте наши уникальные иконки, все это упростит гостям
+              навигацию по меню.
             </p>
           </div>
         </article>
