--- a/src/blocks/footer/footer.html
+++ b/src/blocks/footer/footer.html
@@ -3,7 +3,7 @@
     <a class="footer__logo">
       <img
         class="footer__logo-image"
-        src="./images/logo.svg"
+        src="./images/logo-footer.svg"
         alt="Логотип Qr-меню"
       />
     </a>
