--- a/src/blocks/hiw/hiw.html
+++ b/src/blocks/hiw/hiw.html
@@ -21,83 +21,78 @@
         <li class="hiw__list-item" id="hiw2">
           <h3 class="hiw__list-item-title">Главная</h3>
           <div class="hiw__list-item-description">
-            <p>Небольшое описание</p>
+            <p>Гости увидят меню в самом привычном и удобном для них виде</p>
             <ul class="list-bullet-decor">
-              <li>Пункты</li>
-              <li>Пункты</li>
-              <li>Пункты</li>
+              <li>Доступна смена язык в меню;</li>
+              <li>Все блюда разбиты на категории и подкатегории;</li>
+              <li>Можно листать и просматривать все позиии меню;</li>
+              <li>Все категории и блюда имеют картинки.</li>
             </ul>
           </div>
         </li>
         <li class="hiw__list-item" id="hiw3">
           <h3 class="hiw__list-item-title">Выбор позиций</h3>
           <div class="hiw__list-item-description">
-            <p>Небольшое описание</p>
+            <p>Одним кликом гость добавляет блюдо в заказ</p>
             <ul class="list-bullet-decor">
-              <li>Пункты</li>
-              <li>Пункты</li>
-              <li>Пункты</li>
+              <li>Сразу отображается количество выбранных блюд и цена;</li>
+              <li>Лишнее блюдо можно легко удалить.</li>
             </ul>
           </div>
         </li>
         <li class="hiw__list-item" id="hiw4">
           <h3 class="hiw__list-item-title">Просмотр деталей</h3>
           <div class="hiw__list-item-description">
-            <p>Небольшое описание</p>
+            <p>Гости могут узнать больше о блюде</p>
             <ul class="list-bullet-decor">
-              <li>Пункты</li>
-              <li>Пункты</li>
-              <li>Пункты</li>
+              <li>Порой одной фотографии и цены блюда гостю недостаточно;</li>
+              <li>
+                Подробная информацию о блюде, размер порции — это все поможет
+                гостю определиться с заказом.
+              </li>
             </ul>
           </div>
         </li>
         <li class="hiw__list-item" id="hiw5">
           <h3 class="hiw__list-item-title">Просмотр фотографии блюда</h3>
           <div class="hiw__list-item-description">
-            <p>Небольшое описание</p>
+            <p>Красота кроется в деталях</p>
             <ul class="list-bullet-decor">
-              <li>Пункты</li>
-              <li>Пункты</li>
-              <li>Пункты</li>
+              <li>Фото блюда помогает гостям легче сделать выбор;</li>
+              <li>
+                Картинка упрощает выбор блюда, показывая всю его
+                привлекательность.
+              </li>
             </ul>
           </div>
         </li>
         <li class="hiw__list-item" id="hiw6">
-          <h3 class="hiw__list-item-title">
-            Фиксация сверху меню для быстрого доступа
-          </h3>
+          <h3 class="hiw__list-item-title">Оформление заказа</h3>
           <div class="hiw__list-item-description">
-            <p>Небольшое описание</p>
+            <p>Гости увидят свой заказ перед подтверждением</p>
             <ul class="list-bullet-decor">
-              <li>Пункты</li>
-              <li>Пункты</li>
-              <li>Пункты</li>
+              <li>Все выбранные блюда отображаются с общей стоимостью;</li>
+              <li>Можно отредактировать количество или добавить еще;</li>
+              <li>
+                Есть возможность указать количество гостей и оставить
+                комментарий к заказу.
+              </li>
             </ul>
           </div>
         </li>
         <li class="hiw__list-item" id="hiw7">
-          <h3 class="hiw__list-item-title">
-            Оформление заказа
-          </h3>
+          <h3 class="hiw__list-item-title">Подтверждение заказа</h3>
           <div class="hiw__list-item-description">
-            <p>Небольшое описание</p>
+            <p>После подтверждения заказ отправляется в работу</p>
             <ul class="list-bullet-decor">
-              <li>Пункты</li>
-              <li>Пункты</li>
-              <li>Пункты</li>
-            </ul>
-          </div>
-        </li>
-        <li class="hiw__list-item" id="hiw8">
-          <h3 class="hiw__list-item-title">
-            Подтверждение заказа
-          </h3>
-          <div class="hiw__list-item-description">
-            <p>Небольшое описание</p>
-            <ul class="list-bullet-decor">
-              <li>Пункты</li>
-              <li>Пункты</li>
-              <li>Пункты</li>
+              <li>Официант увидит заказ клиента;</li>
+              <li>
+                Если требуется что-то уточнить у гостя, то офоицант поймет
+                с какого столика был оформден заказ;
+              </li>
+              <li>
+                При необходимости официант может внести изменения в заказ.
+              </li>
             </ul>
           </div>
         </li>
@@ -105,31 +100,27 @@
       <div class="hiw__images">
         <picture class="hiw__image-wrap hiw__image-wrap_active" id="hiw1_image">
           <source srcset="./images/hiw__image-01.webp" type="image/webp" />
-          <img
-            class="hiw__image"
-            src="./images/hiw__image-01.png"
-            alt=""
-          />
+          <img class="hiw__image" src="./images/hiw__image-01.png" alt="Экран приложения электронного меню - главная страница" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw2_image">
           <source srcset="./images/hiw__image-02.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-02.png" alt="" />
+          <img class="hiw__image" src="./images/hiw__image-02.png" alt="Экран приложения электронного меню - страница с выбором блюд" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw3_image">
           <source srcset="./images/hiw__image-03.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-03.png" alt="" />
+          <img class="hiw__image" src="./images/hiw__image-03.png" alt="Экран приложения электронного меню - просмотр детального описания карточки блюда" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw4_image">
           <source srcset="./images/hiw__image-04.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-04.png" alt="" />
+          <img class="hiw__image" src="./images/hiw__image-04.png" alt="Экран приложения электронного меню - просмотр детальной картинки блюда" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw5_image">
           <source srcset="./images/hiw__image-05.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-05.png" alt="" />
+          <img class="hiw__image" src="./images/hiw__image-05.png" alt="Экран приложения электронного меню - страница оформления заказа" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw6_image">
           <source srcset="./images/hiw__image-06.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-06.png" alt="" />
+          <img class="hiw__image" src="./images/hiw__image-06.png" alt="Экран приложения электронного меню - страница с успешным оформлением заказа" />
         </picture>
       </div>
     </div>
