--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -3,7 +3,7 @@
   <a class="header__logo">
     <img
       class="header__logo-image"
-      src="./images/logo.svg"
+      src="./images/logo-header.svg"
       alt="Логотип Qr-меню"
     />
   </a>
@@ -11,7 +11,7 @@
     <a class="header__logo header__logo_place_menu">
       <img
         class="header__logo-image"
-        src="./images/logo.svg"
+        src="./images/logo-header.svg"
         alt="Логотип Qr-меню"
       />
     </a>
