--- a/src/blocks/hiw/hiw.html
+++ b/src/blocks/hiw/hiw.html
@@ -87,7 +87,7 @@
             <ul class="list-bullet-decor">
               <li>Официант увидит заказ клиента;</li>
               <li>
-                Если требуется что-то уточнить у гостя, то офоицант поймет
+                Если требуется что-то уточнить у гостя, то официант поймет
                 с какого столика был оформден заказ;
               </li>
               <li>
