--- a/src/blocks/hiw/hiw.html
+++ b/src/blocks/hiw/hiw.html
@@ -88,7 +88,7 @@
               <li>Официант увидит заказ клиента;</li>
               <li>
                 Если требуется что-то уточнить у гостя, то официант поймет
-                с какого столика был оформден заказ;
+                с какого столика был оформлен заказ;
               </li>
               <li>
                 При необходимости официант может внести изменения в заказ.
