--- a/src/blocks/step/step.html
+++ b/src/blocks/step/step.html
@@ -37,42 +37,12 @@
             <div
               class="step__card-image"
               style="
-                background-image: url('./images/step__image-02.png');
-                background-image: url('./images/step__image-02.webp');
-              "
-            ></div>
-            <div class="step__card-content">
-              <p class="step__card-label-text">Шаг 2</p>
-              <h3 class="step__card-title">Заполните меню</h3>
-              <div class="step__card-description">
-                <p>
-                  Создайте категории, загрузите фотографии и напишите описание
-                </p>
-              </div>
-              <div class="step__card-progress">
-                <span
-                  class="step__card-progress-item step__card-progress-item_active"
-                ></span>
-                <span
-                  class="step__card-progress-item step__card-progress-item_active"
-                ></span>
-                <span class="step__card-progress-item"></span>
-                <span class="step__card-progress-item"></span>
-              </div>
-            </div>
-          </article>
-        </li>
-        <li class="splide__slide">
-          <article class="step__card">
-            <div
-              class="step__card-image"
-              style="
                 background-image: url('./images/step__image-03.png');
                 background-image: url('./images/step__image-03.webp');
               "
             ></div>
             <div class="step__card-content">
-              <p class="step__card-label-text">Шаг 3</p>
+              <p class="step__card-label-text">Шаг 2</p>
               <h3 class="step__card-title">Настройте</h3>
               <div class="step__card-description">
                 <p>Укажите название заведения, загрузите баннер</p>
@@ -85,8 +55,38 @@
                   class="step__card-progress-item step__card-progress-item_active"
                 ></span>
                 <span
+                  class="step__card-progress-item"
+                ></span>
+                <span class="step__card-progress-item"></span>
+              </div>
+            </div>
+          </article>
+        </li>
+        <li class="splide__slide">
+          <article class="step__card">
+            <div
+              class="step__card-image"
+              style="
+                background-image: url('./images/step__image-02.png');
+                background-image: url('./images/step__image-02.webp');
+              "
+            ></div>
+            <div class="step__card-content">
+              <p class="step__card-label-text">Шаг 3</p>
+              <h3 class="step__card-title">Заполните меню</h3>
+              <div class="step__card-description">
+                <p>
+                  Создайте категории и&nbsp;блюда, загрузите фотографии и&nbsp;добавьте описание
+                </p>
+              </div>
+              <div class="step__card-progress">
+                <span
                   class="step__card-progress-item step__card-progress-item_active"
                 ></span>
+                <span
+                  class="step__card-progress-item step__card-progress-item_active"
+                ></span>
+                <span class="step__card-progress-item step__card-progress-item_active"></span>
                 <span class="step__card-progress-item"></span>
               </div>
             </div>
