add new and double lang images

--- a/src/blocks/theme/theme.html
+++ b/src/blocks/theme/theme.html
@@ -19,11 +19,11 @@
       </p>
     </div>
     <picture class="theme__card-image-wrap">
-      <source srcset="./images/lead__image-light.webp" type="image/webp" />
+      <source srcset="./images/base-view-theme-light.webp" type="image/webp" />
       <img
         class="theme__card-image"
-        src="./images/lead__image-light.png"
-        alt=""
+        src="./images/base-view-theme-light.png"
+        alt="Стартовый экран приложения электронного меню. Светлая тема"
       />
     </picture>
   </div>
@@ -41,11 +41,11 @@
       </p>
     </div>
     <picture class="theme__card-image-wrap">
-      <source srcset="./images/lead__image-dark.webp" type="image/webp" />
+      <source srcset="./images/base-view-theme-dark.webp" type="image/webp" />
       <img
         class="theme__card-image"
-        src="./images/lead__image-dark.png"
-        alt=""
+        src="./images/base-view-theme-dark.png"
+        alt="Стартовый экран приложения электронного меню. Тёмная тема"
       />
     </picture>
   </div>
