--- a/src/blocks/lead/lead.html
+++ b/src/blocks/lead/lead.html
@@ -39,19 +39,19 @@
     </div>
     <div class="lead__images">
       <picture class="lead__image-wrap">
-        <source srcset="./images/lead__image-light.webp" type="image/webp" />
+        <source srcset="./images/base-view-theme-light.webp" type="image/webp" />
         <img
           class="lead__image lead__image_content_light"
-          src="./images/lead__image-light.png"
-          alt=""
+          src="./images/base-view-theme-light.png"
+          alt="Стартовый экран приложения электронного меню. Светлая тема"
         />
       </picture>
       <picture class="lead__image-wrap">
-        <source srcset="./images/lead__image-dark.webp" type="image/webp" />
+        <source srcset="./images/base-view-theme-dark.webp" type="image/webp" />
         <img
           class="lead__image lead__image_content_dark"
-          src="./images/lead__image-dark.png"
-          alt=""
+          src="./images/base-view-theme-dark.png"
+          alt="Стартовый экран приложения электронного меню. Тёмная тема"
         />
       </picture>
     </div>
