--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -29,6 +29,16 @@
         <a class="header__link" data-link="pricing">Тарифы</a>
       </li>
     </ul>
+    <label class="header__language-label">
+      <input
+        type="checkbox"
+        name="language"
+        class="header__language-checkbox"
+      />
+      <span class="header__language-pseudo-checkbox"></span>
+      <span class="header__language-label-text header__language-label-text_content_ru">RU</span>
+      <span class="header__language-label-text header__language-label-text_content_en">EN</span>
+    </label>
     <ul class="header__social-list">
       <li class="header__social-list-item">
         <a class="header__social-link" href="#0">
